force-app/main/default/objects/Contact/fields/Active_Sponsorships__c.field-meta.xml
<CustomField>
    <fullName>Active_Sponsorships__c</fullName>
    <label>Active Sponsorships</label>
    <summaryFilterItems>
        <field>Sponsorship__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Sponsorship__c.Orphan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>