force-app/main/default/objects/Contact/fields/Activity_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Activity_Photo_URL__c</fullName>
    <formula>Orphan_Visit__r.Activity_Photo_URL__c</formula>
    <label>Activity Photo URL</label>
    <type>Text</type>
</CustomField>