force-app/main/default/objects/Contact/fields/Address_Is_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Address_Is_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This property is used to distinguish contacts whose addresses have been verified as incorrect, but have not been updated by the contact, for example, this could happen by returned mail.</description>
    <inlineHelpText>Tick this if contact address is incorrect and contact is active.</inlineHelpText>
    <label>Address Is Invalid</label>
    <type>Checkbox</type>
</CustomField>