force-app/main/default/objects/Contact/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <label>Deprecated Age</label>
    <length>80</length>
    <type>Text</type>
</CustomField>