force-app/main/default/objects/Contact/fields/Aspirations__c.field-meta.xml
<CustomField>
    <fullName>Aspirations__c</fullName>
    <label>Aspirations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Aspirations</valueSetName>
    </valueSet>
</CustomField>