force-app/main/default/objects/Contact/fields/Badges__c.field-meta.xml
<CustomField>
    <fullName>Badges__c</fullName>
    <formula>IF(AND(Is_Donor__c=True,npo02__OppAmountThisYear__c&gt;250,ISPICKVAL(Regional_Office_Code__c,&apos;IE&apos;)),IMAGE(&quot;/resource/1626954523000/CHY3Donor?&quot;,&quot;CHY3DonorBadge&quot;, 30, 100),IF( Is_Donor__c  = True,  IMAGE(&quot;/resource/1596807778000/BadgeDonor?&quot;,&quot;DonorBadge&quot;, 30, 100),&apos;&apos; ))&amp;&apos; &apos;&amp; IF( Is_Volunteer__c = True, IMAGE(&quot;/resource/1596807899000/BadgeVolunteer?&quot;, &quot;BadgeVolunteer&quot;, 30, 100),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badges</label>
    <type>Text</type>
</CustomField>