force-app/main/default/objects/Contact/fields/Can_Appeal_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Can_Appeal_Via_Email__c</fullName>
    <label>Can Appeal Via Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDPR</valueSetName>
    </valueSet>
</CustomField>