force-app/main/default/objects/Contact/fields/Casesafe_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Casesafe_Contact_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casesafe Contact ID</label>
    <type>Text</type>
</CustomField>