force-app/main/default/objects/Contact/fields/CHY3_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>CHY3_Form_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHY3 Form Sent</label>
    <type>Checkbox</type>
</CustomField>