force-app/main/default/objects/Contact/fields/CHY3_Qualified_Donor__c.field-meta.xml
<CustomField>
    <fullName>CHY3_Qualified_Donor__c</fullName>
    <formula>AND(npo02__OppAmountThisYear__c &gt; 250, ISPICKVAL(Regional_Office_Site_Code__c,&apos;IE&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CHY3 Qualified Donor</label>
    <type>Checkbox</type>
</CustomField>