force-app/main/default/objects/Contact/fields/CHY3_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>CHY3_Send_Date__c</fullName>
    <label>CHY3 Send Date</label>
    <type>Date</type>
</CustomField>