force-app/main/default/objects/Contact/fields/Class_Number__c.field-meta.xml
<CustomField>
    <fullName>Class_Number__c</fullName>
    <label>Class Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>