force-app/main/default/objects/Contact/fields/Class_Number_ID__c.field-meta.xml
<CustomField>
    <fullName>Class_Number_ID__c</fullName>
    <label>Class Number / ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>