force-app/main/default/objects/Contact/fields/Class_Teacher_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Teacher_Name__c</fullName>
    <label>Class Teacher Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>