force-app/main/default/objects/Contact/fields/Confidentiality_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confidentiality Agreement sent or not</description>
    <inlineHelpText>Confidentiality Agreement sent to volunteer</inlineHelpText>
    <label>Confidentiality Agreement</label>
    <type>Checkbox</type>
</CustomField>