force-app/main/default/objects/Contact/fields/Confidentiality_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Confidentiality_Agreement_Date__c</fullName>
    <description>Date of sending Confidentiality Agreement to volunteer</description>
    <label>Confidentiality Agreement Date</label>
    <type>Date</type>
</CustomField>