force-app/main/default/objects/Contact/fields/Contact_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Contact_Geolocation__c</fullName>
    <description>Used to verify contact&apos;s geolocation from latitude and longitude data.</description>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>