force-app/main/default/objects/Contact/fields/Created_Via_Api__c.field-meta.xml
<CustomField>
    <fullName>Created_Via_Api__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Via Api</label>
    <type>Checkbox</type>
</CustomField>