force-app/main/default/objects/Contact/fields/Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Current_Age__c</fullName>
    <formula>IF( Contact_Type__c == &apos;Orphan&apos; &amp;&amp; NOT( ISBLANK( Birthdate ) ) ,
IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
YEAR (Today()) - YEAR ( Birthdate ),
YEAR (Today()) - YEAR ( Birthdate ) -1 ),
IF( YEAR (Today()) - YEAR ( npo02__FirstCloseDate__c ) &lt;&gt;0,
YEAR (Today()) - YEAR ( npo02__FirstCloseDate__c ),
MONTH (Today()) - MONTH ( npo02__FirstCloseDate__c ) -1 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>