force-app/main/default/objects/Contact/fields/Data_Import_Batch_Guid__c.field-meta.xml
<CustomField>
    <fullName>Data_Import_Batch_Guid__c</fullName>
    <description>Data Upload Batch Guid for all type of Contact Uploads</description>
    <externalId>true</externalId>
    <inlineHelpText>Data Upload Batch Guid</inlineHelpText>
    <label>Data Import Batch Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>