force-app/main/default/objects/Contact/fields/Data_Source_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Data_Source_Identifier__c</fullName>
    <description>Used for data imports to describe where the data came from.</description>
    <label>Data Source Identifier</label>
    <length>200</length>
    <type>Text</type>
</CustomField>