force-app/main/default/objects/Contact/fields/Days_In__c.field-meta.xml
<CustomField>
    <fullName>Days_In__c</fullName>
    <formula>Email_Opt_Out_Date__c - Email_Opt_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>