force-app/main/default/objects/Contact/fields/Distance_To_School__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_School__c</fullName>
    <label>Distance To School</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>