force-app/main/default/objects/Contact/fields/Distance_To_School_MOU__c.field-meta.xml
<CustomField>
    <fullName>Distance_To_School_MOU__c</fullName>
    <label>Distance To School MOU</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Km</fullName>
            </value>
            <value>
                <fullName>Miles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>