force-app/main/default/objects/Contact/fields/DMS_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Contact_ID__c</fullName>
    <description>Contact ID for Files imported from DMS</description>
    <externalId>true</externalId>
    <label>DMS Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>