force-app/main/default/objects/Contact/fields/DMS_Supporter_ID__c.field-meta.xml
<CustomField>
    <fullName>DMS_Supporter_ID__c</fullName>
    <description>Supporter ID Number for Fields imported from DMS</description>
    <externalId>true</externalId>
    <label>DMS Supporter ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>