force-app/main/default/objects/Contact/fields/DMS_SupporterID__c.field-meta.xml
<CustomField>
    <fullName>DMS_SupporterID__c</fullName>
    <description>DMS Supporter ID Field</description>
    <externalId>true</externalId>
    <label>DMS SupporterID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>