force-app/main/default/objects/Contact/fields/Do_Not_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact_Reason__c</fullName>
    <description>This provides a list of reasons a contact would request to not be contacted, it works with the Do Not Contact check box.</description>
    <inlineHelpText>Add reason for contact requesting Do Not Contact.</inlineHelpText>
    <label>Do Not Contact Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Supporter Request</fullName>
            </value>
            <value>
                <fullName>Data Service Gone Away</fullName>
            </value>
            <value>
                <fullName>Moving Abroad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>