force-app/main/default/objects/Contact/fields/Do_Not_Dispatch_Scheme_Feedbacks__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Dispatch_Scheme_Feedbacks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for donors who donate to special requests, but do not want to receive updates or reports of their requests.</description>
    <label>Do Not Dispatch Scheme Feedbacks</label>
    <type>Checkbox</type>
</CustomField>