force-app/main/default/objects/Contact/fields/Do_Not_Mail__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box to filter contacts who do not want to be contacted by Post.</description>
    <inlineHelpText>Check if donor does not want to be contacted by Post.</inlineHelpText>
    <label>Do Not Post</label>
    <type>Checkbox</type>
</CustomField>