force-app/main/default/objects/Contact/fields/Do_Not_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for contacts who do not wish to be receipted.</description>
    <label>Do Not Receipt</label>
    <type>Checkbox</type>
</CustomField>