force-app/main/default/objects/Contact/fields/Donated__c.field-meta.xml
<CustomField>
    <fullName>Donated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donated</label>
    <type>Checkbox</type>
</CustomField>