force-app/main/default/objects/Contact/fields/Donation_Statement_Last_year__c.field-meta.xml
<CustomField>
    <fullName>Donation_Statement_Last_year__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donation Statement (Last year)</label>
    <type>Checkbox</type>
</CustomField>