force-app/main/default/objects/Contact/fields/Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID__c</fullName>
    <description>Unique Donor ID - Country Code + 7 Digits (UK1234567)</description>
    <externalId>true</externalId>
    <label>Donor ID</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>