force-app/main/default/objects/Contact/fields/Donor_ID_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Donor_ID_QR_Code__c</fullName>
    <formula>IMAGE(&apos;https://api.qrserver.com/v1/create-qr-code/?size=150x150&amp;data=&apos;&amp;Donor_ID__c, Donor_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Donor_ID_QR_Code</label>
    <type>Text</type>
</CustomField>