force-app/main/default/objects/Contact/fields/Donor_SF_ID_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Donor_SF_ID_Sponsor__c</fullName>
    <label>Donor_SF_ID(Sponsor)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>