force-app/main/default/objects/Contact/fields/DonorIDnumber__c.field-meta.xml
<CustomField>
    <fullName>DonorIDnumber__c</fullName>
    <description>Donor ID Number - Used for Generating Unique Donor ID</description>
    <displayFormat>{0000000}</displayFormat>
    <label>Donor ID Number</label>
    <type>AutoNumber</type>
</CustomField>