force-app/main/default/objects/Contact/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email (Unique) - used by Website</description>
    <externalId>true</externalId>
    <inlineHelpText>Email (Unique)</inlineHelpText>
    <label>Email (Unique)</label>
    <type>Email</type>
</CustomField>