force-app/main/default/objects/Contact/fields/Email_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out_Date__c</fullName>
    <label>Email Opt Out Date</label>
    <type>Date</type>
</CustomField>