force-app/main/default/objects/Contact/fields/Email_Preference_declared__c.field-meta.xml
<CustomField>
    <fullName>Email_Preference_declared__c</fullName>
    <label>Email Preference declared</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Means_of_preference_declaration</valueSetName>
    </valueSet>
</CustomField>