force-app/main/default/objects/Contact/fields/Email_Single_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Email_Single_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>