force-app/main/default/objects/Contact/fields/Emergency_Contact__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact__c</fullName>
    <description>Volunteer Emergency Contact</description>
    <label>Emergency Contact</label>
    <type>TextArea</type>
</CustomField>