force-app/main/default/objects/Contact/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>Used for Staff contacts</description>
    <externalId>true</externalId>
    <label>Employee Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>