force-app/main/default/objects/Contact/fields/Estimated_Tax_Back_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Tax_Back_Amount__c</fullName>
    <formula>npo02__OppAmountThisYear__c  * 30  / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Tax Back Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>