force-app/main/default/objects/Contact/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>Volunteer (contact) experience as volunteer</description>
    <label>Experience</label>
    <length>131070</length>
    <type>LongTextArea</type>
</CustomField>