force-app/main/default/objects/Contact/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External Id for Donor Upsert</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique and External Id</inlineHelpText>
    <label>External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>