force-app/main/default/objects/Contact/fields/Family_Photo_URL__c.field-meta.xml
<CustomField>
    <fullName>Family_Photo_URL__c</fullName>
    <formula>Orphan_Visit__r.Family_Photo_URL__c</formula>
    <label>Family Photo URL</label>
    <type>Text</type>
</CustomField>