force-app/main/default/objects/Contact/fields/Feedback_Notifications_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notifications_Via_Email__c</fullName>
    <description>Removed from all Contact page layouts and FLS 27/01/2021 because not required as part of the any solution</description>
    <label>Feedback Notifications Via Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDPR</valueSetName>
    </valueSet>
</CustomField>