force-app/main/default/objects/Contact/fields/Feedback_Notifications_Via_Email_old__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notifications_Via_Email_old__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field confirms contact accepts email notifications for special request project stages and sponsorship annual reports being sent to them by email.

This is default for notifications as long as email value is available,

Removed from all Contact page layouts and FLS 27/01/2021 because not required as part of the any solution (confirmed by Majed)</description>
    <label>Feedback Notifications Via Email</label>
    <type>Checkbox</type>
</CustomField>