force-app/main/default/objects/Contact/fields/Feedback_Notifications_Via_Sms_old__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Notifications_Via_Sms_old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field confirms contact accepts email notifications for special request project stages and sponsorship annual reports being sent to them by SMS.

Requires mobile value for it to be used.
Removed from all Contact page layouts and FLS 27/01/2021 because not required as part of the any solution (confirmed by Majed)</description>
    <label>Feedback Notifications Via Sms</label>
    <type>Checkbox</type>
</CustomField>