force-app/main/default/objects/Contact/fields/Feedback_Reports_Via_Email__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reports_Via_Email__c</fullName>
    <label>Feedback Reports Via Email</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GDPR</valueSetName>
    </valueSet>
</CustomField>