force-app/main/default/objects/Contact/fields/Feedback_Reports_Via_Email_old__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reports_Via_Email_old__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Field confirms contact accepts communication for special request, project and sponsorship reports being sent to them by email.

This is default for feed backs as long as email value is available,</description>
    <label>Feedback Reports Via Email</label>
    <type>Checkbox</type>
</CustomField>