force-app/main/default/objects/Contact/fields/Feedback_Reports_Via_Post_old__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reports_Via_Post_old__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field confirms contact accepts postal communication for special request, project and sponsorship reports being sent to them.</description>
    <label>Feedback Reports Via Post</label>
    <type>Checkbox</type>
</CustomField>