force-app/main/default/objects/Contact/fields/File_destroy_date__c.field-meta.xml
<CustomField>
    <fullName>File_destroy_date__c</fullName>
    <description>Calculate File_destroy_date field when volunteer status is set to Leaver</description>
    <label>File destroy date</label>
    <type>Date</type>
</CustomField>