force-app/main/default/objects/Contact/fields/First_Donation_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Donation_Received_Date__c</fullName>
    <label>First Donation Received Date</label>
    <summarizedField>Sponsorship__c.First_Donation_Received_Date_copy__c</summarizedField>
    <summaryForeignKey>Sponsorship__c.Orphan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>