force-app/main/default/objects/Contact/fields/First_Sponsorship_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sponsorship_Date__c</fullName>
    <label>First Sponsorship Date</label>
    <summarizedField>Sponsorship__c.Start_Date_Time__c</summarizedField>
    <summaryForeignKey>Sponsorship__c.Orphan__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>