force-app/main/default/objects/Contact/fields/Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Full_Address__c</fullName>
    <label>Full Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>