force-app/main/default/objects/Contact/fields/Fundraising_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Deduction__c</fullName>
    <description>A specific deduction percentage for fundraising applied on donations from the specific contact this value is assigned to.</description>
    <label>Fundraising Deduction</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>