force-app/main/default/objects/Contact/fields/Gateway_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Customer_Id__c</fullName>
    <externalId>true</externalId>
    <label>Gateway Customer Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>