force-app/main/default/objects/Contact/fields/GDPR_Delete__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Delete</label>
    <type>Checkbox</type>
</CustomField>