force-app/main/default/objects/Contact/fields/Gift_Aid_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration_Date__c</fullName>
    <label>Gift Aid Declaration Date</label>
    <summarizedField>Gift_Aid_Declaration__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Gift_Aid_Declaration__c.Donor__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>