force-app/main/default/objects/Contact/fields/Gift_Aid_Declaration_Id__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration_Id__c</fullName>
    <label>Gift Aid Declaration Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>