force-app/main/default/objects/Contact/fields/Gift_Aid_Declaration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declaration_Start_Date__c</fullName>
    <label>Gift Aid Declaration Start Date</label>
    <type>Date</type>
</CustomField>