force-app/main/default/objects/Contact/fields/Gift_Aid_Declared__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Declared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Aid Declared</label>
    <type>Checkbox</type>
</CustomField>