force-app/main/default/objects/Contact/fields/Gift_Aid_Delcared__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Delcared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gift Aid Delcared</label>
    <type>Checkbox</type>
</CustomField>