force-app/main/default/objects/Contact/fields/Gift_Aid_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Effective_Date__c</fullName>
    <label>Gift Aid Effective Date</label>
    <type>Date</type>
</CustomField>