force-app/main/default/objects/Contact/fields/Gift_Aid_Status__c.field-meta.xml
<CustomField>
    <fullName>Gift_Aid_Status__c</fullName>
    <label>Gift Aid Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Unspecified</fullName>
                <default>true</default>
                <label>Unspecified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>