force-app/main/default/objects/Contact/fields/Guid__c.field-meta.xml
<CustomField>
    <fullName>Guid__c</fullName>
    <description>Basket Id</description>
    <externalId>true</externalId>
    <label>Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>