force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Skills__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Skills__c</fullName>
    <inlineHelpText>Indicates which skills this Contact has. You can filter on skills when you look for volunteers for particular Jobs.</inlineHelpText>
    <label>Volunteer Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts</fullName>
            </value>
            <value>
                <fullName>Baking</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Creative</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>DBS check</fullName>
            </value>
            <value>
                <fullName>Driving licence</fullName>
            </value>
            <value>
                <fullName>Event planning / management</fullName>
            </value>
            <value>
                <fullName>Face painting / Mehndi</fullName>
            </value>
            <value>
                <fullName>Fundraising</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Languages</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>People Management</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Planning / Organizing</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
            <value>
                <fullName>Public speaking</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Team Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>