force-app/main/default/objects/Contact/fields/GW_Volunteers__Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>GW_Volunteers__Volunteer_Status__c</fullName>
    <label>Volunteer Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>New Sign Up</fullName>
            </value>
            <value>
                <fullName>Prospective</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Leaver</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>