force-app/main/default/objects/Contact/fields/HA_Staff__c.field-meta.xml
<CustomField>
    <fullName>HA_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>HA Staff or Employee</description>
    <label>HA Staff</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>HA_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>