force-app/main/default/objects/Contact/fields/Handbook_Sent__c.field-meta.xml
<CustomField>
    <fullName>Handbook_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Handbook Sent to volunteer</description>
    <inlineHelpText>Handbook Sent to volunteer</inlineHelpText>
    <label>Handbook Sent</label>
    <type>Checkbox</type>
</CustomField>