force-app/main/default/objects/Contact/fields/Handbook_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Handbook_Sent_Date__c</fullName>
    <description>Date of sending Handbook to volunteer</description>
    <label>Handbook Sent Date</label>
    <type>Date</type>
</CustomField>